--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "test:ci": "vitest run --coverage"
+    "test:ci": "vitest run --coverage",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
@@ -16,6 +18,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "esri-loader": "^3.7.0",
+    "gh-pages": "^6.1.1",
     "js-base64": "^3.7.7",
     "postcss": "^8.4.38",
     "prop-types": "^15.8.1",
@@ -38,5 +41,6 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "vite": "^5.3.1"
-  }
+  },
+  "homepage": "https://mayrang.github.io/BaseWemap/"
 }
